kustomize/base/realtime-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: realtime
  labels:
    app: realtime
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: realtime
